--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ environment:
 dependencies:
   http: ^0.12.2
   flutter_secure_storage: ^3.3.5
+  cached_network_image: ^2.5.0
   flutter:
     sdk: flutter
 
