--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   http: ^0.12.2
   flutter_secure_storage: ^3.3.5
   cached_network_image: ^2.5.0
+  modal_bottom_sheet: ^1.0.0+1
   flutter:
     sdk: flutter
 
